converted to attached property

--- a/PanelDragDropReorder/PanelDragDropReorder.vbproj
+++ b/PanelDragDropReorder/PanelDragDropReorder.vbproj
@@ -67,7 +67,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Tile.vb" />
+    <Compile Include="DragDropReorderer.vb" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
